Update to Rechiseled 1.2.0